--- a/info/NEWS.org
+++ b/info/NEWS.org
@@ -1,9 +1,9 @@
-#+DATE: Time-stamp: <2020-04-16>
+#+DATE: Time-stamp: <2020-05-01>
 #+bind: org-html-preamble-format (("en" "%d"))
 #+OPTIONS: html-link-use-abs-url:nil html-postamble:t html-preamble:t
 #+OPTIONS: html-scripts:t html-style:t html5-fancy:nil tex:t
 #+HTML_DOCTYPE: xhtml-strict
-#+DESCRIPTION: Version 20.5.0
+#+DESCRIPTION: Version 20.6.0
 #+HTML_CONTAINER: div
 #+HTML_LINK_HOME: https://github.com/dieter-wilhelm/ansys-mode
 #+HTML_LINK_UP: index.html
@@ -17,7 +17,7 @@
 # #+title: News and History of APDL-Mode
 
 Copyright (C) 2006 - 2020  H. Dieter Wilhelm, GPL V3
-
+* Version 20.6.0
 * Version 20.5.0
   2020-05, help for get- and parametric functions
   - Browsing the help on keywords (C-c C-b) is now working for get-
