--- a/info/TODO.org
+++ b/info/TODO.org
@@ -1,4 +1,4 @@
-#+DATE: Time-stamp: <2021-08-09>
+#+DATE: Time-stamp: <2021-08-16>
 #+bind: org-html-preamble-format (("en" "%d"))
 #+OPTIONS: html-link-use-abs-url:nil html-postamble:t html-preamble:t
 #+OPTIONS: html-scripts:t html-style:t html5-fancy:nil tex:t
@@ -27,12 +27,6 @@ Melpa: [2020-10-24 Sa] 396 downloads
      - Code Templates, apdl-wb-custom-template-directory
      - Export of WB command objects to file on disc in the manual
 ** Issues
-   - Cygwin emacs-w32 ugly ^M line endings for C-c C-l
-   - Cygwin terminal initialisation not working, /cydrive/c:?
-     - setting -ansys-installation-path should do
-       - ugly ^M line endings -license-status
-       - w32-shell-execute not working for -start-help-program
-   - C-c C-v doesn't preserve "point" of the APDL file
    - M-? parameter counter is not working for commands where functions
      with multiple arguments are in the argument list!
      f,node(x,y,z),,,
@@ -40,13 +34,18 @@ Melpa: [2020-10-24 Sa] 396 downloads
      `1/ en' is fontified!
    - C-u C-c C-b in browser on Win10 for "All"stuff isn't skipping to
      the respective section on page for Chrome and Edge!?
+   - Cygwin terminal initialisation not working, /cydrive/c:?
+     - setting -ansys-installation-path should do
+       - ugly ^M line endings -license-status
+       - w32-shell-execute not working for -start-help-program
+   - Cygwin emacs-w32 ugly ^M line endings for C-c C-l
 ** Checks
-   - EWW bug: not working with remote ssh -help-path
-     (debbugs-gnu-bugs 40425)
    - Changed file size without warning to 30 MB what is Emacs-26
      using?
+   - EWW bug: not working with remote ssh -help-path
+     (debbugs-gnu-bugs 40425)
 ** Wishes
-   - WB-templates, more of them
+   - Templates, WB-templates, more of them
    - Presentation(s) and EN Wiki, youtube?
    - Help system and docu, rather complete, except online docu
 *** Docu
