--- a/info/NEWS.org
+++ b/info/NEWS.org
@@ -1,4 +1,4 @@
-#+DATE: Time-stamp: <2021-08-12>
+#+DATE: Time-stamp: <2021-08-19>
 #+bind: org-html-preamble-format (("en" "%d"))
 #+OPTIONS: html-link-use-abs-url:nil html-postamble:t html-preamble:t
 #+OPTIONS: html-scripts:t html-style:t html5-fancy:nil tex:t
@@ -17,11 +17,14 @@
 # #+title: News and History of APDL-Mode
 
 Copyright (C) 2006 - 2021  H. Dieter Wilhelm, GPL V3
-* Version 20.6.0, 15 years of APDL-Mode! :-)
-  - Implemented batch runs (now C-c C-y) and .out file inspection
+* Version 20.6.0, 15 years of APDL-Mode!
+  - Implemented start of batch runs (now C-c C-y) and job-name.out
+    file inspection
   - Added customisation section for user templates
-  - Added apdl-start-classic and -start-launcher to the auto-loaded
-    commands
+  - apdl-start-classic and -start-launcher are now auto-loaded
+    commands (They can be run from the mini buffer (M-x), without
+    having a file in apdl-mode)
+  - Improved highlighting of user variables
 * Version 20.5.0
   2020-05, help for get- and parametric functions
   - Browsing the help on keywords (C-c C-b) is now working for get-
@@ -32,7 +35,7 @@ Copyright (C) 2006 - 2021  H. Dieter Wilhelm, GPL V3
     the numbers is displaying the definition in the APDL Buffer.
   - Added license overview with Ansys license feature descriptions to
     `apdl-license-status' (C-c C-l).
-  - Added a menu entry for browsing the main Ansys online help page.
+  - Added a menu entry for opening the main Ansys online help page.
 * Version 20.4.0
   2020-04, Updated for Ansys 2020R1
   - Updated keyword- and completion system to Ansys 2020R1 (v201)
